# gentest

./: .bazelrc  .clang-format  .clang-tidy  .cmake-format.py  .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CTestConfig.cmake  DEPRECATIONS.md  DEVLOG.md  DEVLOG.md (append)  INCLUDE_PATH_FIX.md  MODULE.bazel  README.md  WORKSPACE  build_time_after.txt  build_time_before.txt  cli_requirements.md  conanfile.py  devlog.md  meson.build  meson_options.txt  plan.md  vcpkg-configuration.json  vcpkg.json  xmake.lua
benchmarks/gtest_compare/: CMakeLists.txt  append_iota_workload.hpp  doctest_compat.hpp  doctest_integration.cpp  doctest_main.cpp  doctest_skiponly.cpp  doctest_unit.cpp  gbench_append_iota_bench.cpp  gentest_append_iota_bench.cpp  gtest_integration.cpp  gtest_skiponly.cpp  gtest_unit.cpp  nanobench_append_iota_bench.cpp
cmake/scan_inspector/: CMakeLists.txt  main.cpp
examples/hello/: CMakeLists.txt  README.md  cases.cpp
examples/hello_modules/: CMakeLists.txt  README.md  cases.cppm
examples/udp_multi_node/: CMakeLists.txt  session_mode_a.json.in  udp_client.cpp  udp_server.cpp
libcoord/: CMakeLists.txt
libcoord/src/: codec.cpp  json.cpp  tls_backend.cpp  tls_backend.h  transport.cpp
meson/textual/: meson.build
src/: CMakeLists.txt  async.cpp  bench_stats.cpp  context_api.cpp  gentest_anchor.cpp  gentest_main.cpp  main.cpp  process.cpp  runner_async_status_renderer.cpp  runner_async_status_renderer.h  runner_case_invoker.cpp  runner_case_invoker.h  runner_cli.cpp  runner_cli.h  runner_context_scope.h  runner_fixture_runtime.cpp  runner_fixture_runtime.h  runner_impl.cpp  runner_measured_executor.cpp  runner_measured_executor.h  runner_measured_format.cpp  runner_measured_format.h  runner_measured_report.cpp  runner_measured_report.h  runner_orchestrator.cpp  runner_orchestrator.h  runner_reporting.cpp  runner_reporting.h  runner_reporting_allure.cpp  runner_reporting_allure.h  runner_result_model.h  runner_selector.cpp  runner_selector.h  runner_tag_utils.h  runner_test_executor.cpp  runner_test_executor.h  runner_test_plan.cpp  runner_test_plan.h  runtime_context.cpp
tests/: CMakeLists.txt  explicit_textual_mocks.hpp  test_boost_ut.cpp  test_catch2.cpp  test_doctest.cpp  test_gtest.cpp
tests/async/: cases.cpp
tests/async_live_slow/: cases.cpp
tests/benchmarks/: bench_types.hpp  cases.cpp
tests/buildsystems/: bazel_module_boundary.sh  consumer_simple_module_cases.cppm  consumer_textual_cases.cpp  simple_module_cases.cppm
tests/cmake/: CheckCoordExampleJsonGate.cmake  CheckCoordSmokeWorkflow.cmake  CheckCoordTlsReconfigure.cmake  Regressions.cmake
tests/concurrency/: cases.cpp
tests/consumer/: CMakeLists.txt  assertions_header_isolation.cpp  cases.cpp  cases.cppm  header_mock_defs.hpp  main.cpp  main_module.cpp  module_mock_defs.cppm  service.hpp  service_module.cppm  simple_module_mock_defs.cppm
tests/coord/: cases.cpp
tests/ctor/: cases.cpp  fixtures.hpp
tests/expected/: fake_inventory_blocked_status.list  fake_inventory_semicolon_status.list  fixtures.list  integration.list  mocking.list  outcomes_status.list  readme_fixtures.list  skiponly.list  templates.list  unit.list
tests/failing/: cases.cpp  mock_types.hpp
tests/fixture_errors/: fixtures.hpp  fixtures_attribute_removed.cpp  global_member_test.cpp  namespace_scope.cpp  suite_member_test.cpp  top_level_suite_fixture.cpp
tests/fixtures/: cases.cpp  fixtures.hpp
tests/integration/: cases.cpp
tests/libassert/: cases.cpp  mock_types.hpp
tests/mock_errors/: anonymous_namespace_type.cpp  header_main_tu.hpp  incomplete_virtual_ref.cpp  local_class.cpp  named_module_ok.cppm  nonvirtual_defined_in_cpp.cpp  nonvirtual_defined_in_cppm.cppm  nonvirtual_defined_in_cu.cu  nonvirtual_defined_in_header_mpp.mpp  nonvirtual_defined_in_header_noext  nonvirtual_defined_in_included_cpp.cpp  nonvirtual_defined_in_included_cppm.cpp  nonvirtual_defined_in_included_cu.cpp  nonvirtual_defined_in_included_mpp.cpp  nonvirtual_defined_in_included_noext.cpp  virtual_defined_in_cpp.cpp
tests/mocking/: cases.cpp  helper.hpp  types.h
tests/outcomes/: cases.cpp
tests/readme_fixtures/: cases.cpp
tests/regressions/: async_status_renderer.cpp  bench_assert_propagation.cpp  cli_suffix_ambiguity.cpp  coord_peer_target_forwarding.cpp  coord_submit_filesystem_exception.cpp  coord_terminate_all_completed_pid.cpp  coordctl_ready_timeout_invalid.cpp  coordd_invalid_listen_parse.cpp  fixture_group_shuffle_invariants.cpp  local_fixture_teardown_noexceptions.cpp  local_fixture_teardown_on_throw.cpp  logging_output_regressions.cpp  measured_generated_local_fixture_partial_setup_teardown.cpp  measured_generated_local_fixture_setup_throw_teardown_armed.cpp  measured_local_fixture_call_teardown_dualfail.cpp  measured_local_fixture_partial_setup_teardown.cpp  measured_local_fixture_setup_assert_teardown_armed.cpp  measured_local_fixture_setup_expect_throw.cpp  measured_local_fixture_setup_failure_then_skip.cpp  measured_local_fixture_setup_skip_teardown_fail.cpp  measured_local_fixture_setup_skip_teardown_skip.cpp  measured_local_fixture_setup_throw_teardown_armed.cpp  measured_local_fixture_teardown_skip.cpp  measured_report_coverage.cpp  member_shared_fixture_setup_skip.cpp  member_shared_fixture_setup_skip_bench_jitter.cpp  orchestrator_fail_fast_blocks_measured.cpp  orchestrator_fail_fast_blocks_measured_after_blocked.cpp  reporting_attachment_collision.cpp  runtime_case_snapshot_isolated.cpp  runtime_reporting_regressions.cpp  runtime_selection_regressions.cpp  shared_fixture_duplicate_registration.cpp  shared_fixture_duplicate_registration_idempotent.cpp  shared_fixture_global_scope_most_specific.cpp  shared_fixture_global_scope_prefix_collision.cpp  shared_fixture_manual_create_assert_skip.cpp  shared_fixture_manual_create_expect_skip.cpp  shared_fixture_manual_create_expect_skip_precedence.cpp  shared_fixture_manual_create_expect_throw.cpp  (+27 more)
tests/skiponly/: cases.cpp
tests/smoke/: baseline_requires_bench.cpp  (+31 more)
tools/: CMakeLists.txt  terminfo_shim.map
(+861 files in other folders)
