load('//build_defs:gentest.bzl', 'gentest_add_mocks_textual', 'gentest_attach_codegen_textual', 'gentest_suite')
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

_gentest_linkopts = select({
    '@bazel_tools//src/conditions:windows': [],
    '@bazel_tools//src/conditions:darwin': [],
    '//conditions:default': ['-fuse-ld=bfd'],
})

# Build gentest_codegen via CMake inside Bazel
_gentest_codegen_build_srcs = glob(
    [
        "CMakeLists.txt",
        "cmake/**",
        "tools/**",
        "include/**",
        "vcpkg.json",
        "vcpkg-configuration.json",
    ],
    exclude = [
        "build/**",
        "bazel-*/**",
        ".git/**",
    ],
    allow_empty = False,
)

genrule(
    name = 'gentest_codegen_build_unix',
    # Best-effort dependency tracking: this genrule shells out to CMake and is not hermetic.
    # Still, we want Bazel to rebuild `gentest_codegen` when the generator sources/config change.
    srcs = _gentest_codegen_build_srcs,
    outs = ['gen_tools/gentest_codegen'],
    cmd = "set -e; " +
          "GENTEST_CMAKE_ARGS='-DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON'; " +
          "if [ -x /opt/homebrew/bin/cmake ]; then GENTEST_CMAKE_BIN=/opt/homebrew/bin/cmake; " +
          "else GENTEST_CMAKE_BIN=$$(command -v cmake); fi && " +
          "if [ -x /opt/homebrew/bin/ninja ]; then GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -G Ninja -DCMAKE_MAKE_PROGRAM=/opt/homebrew/bin/ninja\"; fi && " +
          "if [ -n \"$${CC:-}\" ]; then GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -DCMAKE_C_COMPILER=$$CC\"; " +
          "elif [ -x /opt/homebrew/opt/llvm/bin/clang ]; then GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -DCMAKE_C_COMPILER=/opt/homebrew/opt/llvm/bin/clang\"; fi && " +
          "if [ -n \"$${CXX:-}\" ]; then GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -DCMAKE_CXX_COMPILER=$$CXX\"; " +
          "elif [ -x /opt/homebrew/opt/llvm/bin/clang++ ]; then GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -DCMAKE_CXX_COMPILER=/opt/homebrew/opt/llvm/bin/clang++\"; fi && " +
          "if [ -n \"$${LLVM_DIR:-}\" ]; then GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -DLLVM_DIR=$$LLVM_DIR\"; " +
          "elif [ -d /opt/homebrew/opt/llvm/lib/cmake/llvm ]; then GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -DLLVM_DIR=/opt/homebrew/opt/llvm/lib/cmake/llvm\"; fi && " +
          "if [ -n \"$${Clang_DIR:-}\" ]; then GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -DClang_DIR=$$Clang_DIR\"; " +
          "elif [ -d /opt/homebrew/opt/llvm/lib/cmake/clang ]; then GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -DClang_DIR=/opt/homebrew/opt/llvm/lib/cmake/clang\"; fi && " +
          "if [ -z \"$${GENTEST_CMAKE_BIN}\" ]; then echo 'gentest bazel: cmake not found' >&2; exit 127; fi && " +
          "rm -rf $(@D)/b && mkdir -p $(@D)/b && " +
          "\"$${GENTEST_CMAKE_BIN}\" -S . -B $(@D)/b $$GENTEST_CMAKE_ARGS && " +
          "\"$${GENTEST_CMAKE_BIN}\" --build $(@D)/b --target gentest_codegen -j 1 && " +
          "if [ -f $(@D)/b/compile_commands.json ]; then cp $(@D)/b/compile_commands.json $(@D)/compile_commands.json; fi && " +
          "cp $(@D)/b/tools/gentest_codegen $@",
    tags = ['no-sandbox', 'local'],
    target_compatible_with = select({
        '@bazel_tools//src/conditions:windows': ['@platforms//:incompatible'],
        '//conditions:default': [],
    }),
)

genrule(
    name = 'gentest_codegen_build_windows',
    srcs = _gentest_codegen_build_srcs,
    outs = ['gen_tools/gentest_codegen.exe'],
    cmd_bat = "set GENTEST_CMAKE_ARGS=-DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON && " +
              "if defined CC set GENTEST_CMAKE_ARGS=%GENTEST_CMAKE_ARGS% -DCMAKE_C_COMPILER=\"%CC%\" && " +
              "if defined CXX set GENTEST_CMAKE_ARGS=%GENTEST_CMAKE_ARGS% -DCMAKE_CXX_COMPILER=\"%CXX%\" && " +
              "if defined LLVM_DIR set GENTEST_CMAKE_ARGS=%GENTEST_CMAKE_ARGS% -DLLVM_DIR=\"%LLVM_DIR%\" && " +
              "if defined Clang_DIR set GENTEST_CMAKE_ARGS=%GENTEST_CMAKE_ARGS% -DClang_DIR=\"%Clang_DIR%\" && " +
              "if exist \"%ProgramFiles%\\CMake\\bin\\cmake.exe\" (set GENTEST_CMAKE_BIN=%ProgramFiles%\\CMake\\bin\\cmake.exe) else (set GENTEST_CMAKE_BIN=cmake) && " +
              "if exist $(@D)\\b rmdir /S /Q $(@D)\\b && mkdir $(@D)\\b && " +
              "\"%GENTEST_CMAKE_BIN%\" -S . -B $(@D)\\b %GENTEST_CMAKE_ARGS% && " +
              "\"%GENTEST_CMAKE_BIN%\" --build $(@D)\\b --target gentest_codegen --config Release && " +
              "if exist $(@D)\\b\\compile_commands.json copy /Y $(@D)\\b\\compile_commands.json $(@D)\\compile_commands.json >NUL && " +
              "(if exist $(@D)\\b\\tools\\Release\\gentest_codegen.exe " +
              "(copy /Y $(@D)\\b\\tools\\Release\\gentest_codegen.exe $@ >NUL) " +
              "else (copy /Y $(@D)\\b\\tools\\gentest_codegen.exe $@ >NUL))",
    tags = ['no-sandbox', 'local'],
    target_compatible_with = select({
        '@bazel_tools//src/conditions:windows': [],
        '//conditions:default': ['@platforms//:incompatible'],
    }),
)

alias(
    name = 'gentest_codegen_build',
    actual = select({
        '@bazel_tools//src/conditions:windows': ':gentest_codegen_build_windows',
        '//conditions:default': ':gentest_codegen_build_unix',
    }),
)

alias(
    name = 'gentest_codegen',
    actual = ':gentest_codegen_build',
    visibility = ['//visibility:public'],
)

cc_library(
    name = 'gentest_runtime',
    srcs = [
        'src/bench_stats.cpp',
        'src/runtime_context.cpp',
        'src/runner_case_invoker.cpp',
        'src/runner_case_invoker.h',
        'src/runner_cli.cpp',
        'src/runner_cli.h',
        'src/runner_fixture_runtime.cpp',
        'src/runner_fixture_runtime.h',
        'src/runner_measured_executor.cpp',
        'src/runner_measured_executor.h',
        'src/runner_measured_format.cpp',
        'src/runner_measured_format.h',
        'src/runner_measured_report.cpp',
        'src/runner_measured_report.h',
        'src/runner_impl.cpp',
        'src/runner_orchestrator.cpp',
        'src/runner_orchestrator.h',
        'src/runner_reporting.cpp',
        'src/runner_reporting.h',
        'src/runner_result_model.h',
        'src/runner_selector.cpp',
        'src/runner_selector.h',
        'src/runner_test_executor.cpp',
        'src/runner_test_executor.h',
        'src/runner_test_plan.cpp',
        'src/runner_test_plan.h',
    ],
    hdrs = glob([
        'include/gentest/*.h',
        'include/gentest/detail/*.h',
        'third_party/include/tabulate/*.hpp',
    ], allow_empty = False),
    copts = ['-std=c++20', '-DFMT_HEADER_ONLY', '-Iinclude', '-Itests', '-Ithird_party/include'] + select({
        '@bazel_tools//src/conditions:windows': ['/wd5030'],
        '//conditions:default': ['-Wno-attributes'],
    }),
    includes = ['include', 'third_party/include'],
    linkopts = _gentest_linkopts,
    deps = ['@fmt//:fmt'],
    visibility = ['//visibility:public'],
)

cc_library(
    name = 'gentest_main',
    srcs = ['src/gentest_main.cpp'],
    copts = ['-std=c++20', '-DFMT_HEADER_ONLY', '-Iinclude', '-Itests'] + select({
        '@bazel_tools//src/conditions:windows': ['/wd5030'],
        '//conditions:default': ['-Wno-attributes'],
    }),
    linkopts = _gentest_linkopts,
    deps = [
        ':gentest_runtime',
        '@fmt//:fmt',
    ],
    visibility = ['//visibility:public'],
)

sh_test(
    name = 'codegen_check_invalid',
    srcs = ['scripts/codegen_check_invalid.sh'],
    data = [
        ':gentest_codegen_build',
        'tests/smoke/invalid_attrs.cpp',
    ],
)

gentest_add_mocks_textual(
    name = 'gentest_consumer_textual_mocks',
    defs = ['tests/consumer/header_mock_defs.hpp'],
    public_header = 'gentest_consumer_mocks.hpp',
    staged_support_headers = ['deps/0478dfbbe6c184098f87ed47b43d96f9_service.hpp'],
    linkopts = _gentest_linkopts,
)

gentest_attach_codegen_textual(
    name = 'gentest_consumer_textual_bazel',
    src = 'tests/buildsystems/consumer_textual_cases.cpp',
    main = 'tests/consumer/main.cpp',
    mock_targets = [':gentest_consumer_textual_mocks'],
    linkopts = _gentest_linkopts,
    source_includes = ['tests', 'tests/buildsystems', 'tests/consumer'],
)

sh_binary(
    name = 'poc_cross_aarch64_qemu',
    srcs = ['scripts/poc_cross_aarch64_qemu.sh'],
    tags = ['local', 'manual'],
    visibility = ['//visibility:public'],
)

gentest_suite('unit')
gentest_suite('integration')
gentest_suite('fixtures')
gentest_suite('skiponly')
