load(
    '//bazel:defs.bzl',
    'gentest_add_mocks_modules',
    'gentest_add_mocks_textual',
    'gentest_attach_codegen_modules',
    'gentest_attach_codegen_textual',
    'gentest_suite',
)
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

filegroup(
    name = "gentest_public_headers",
    srcs = glob([
        "include/gentest/*.h",
        "include/gentest/detail/*.h",
        "third_party/include/tabulate/*.hpp",
    ], allow_empty = False),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "gentest_public_module_interfaces",
    srcs = [
        "include/gentest/gentest.cppm",
        "include/gentest/gentest.mock.cppm",
        "include/gentest/gentest.bench_util.cppm",
    ],
    visibility = ["//visibility:public"],
)

_gentest_linkopts = select({
    '@bazel_tools//src/conditions:windows': [],
    '@bazel_tools//src/conditions:darwin': [],
    '//conditions:default': ['-fuse-ld=bfd'],
})

_gentest_module_features = ['cpp_modules']

# Build gentest_codegen via CMake inside Bazel
_gentest_codegen_build_srcs = glob(
    [
        "CMakeLists.txt",
        "cmake/**",
        "tools/**",
        "include/**",
        "vcpkg.json",
        "vcpkg-configuration.json",
    ],
    exclude = [
        "build/**",
        "bazel-*/**",
        ".git/**",
    ],
    allow_empty = False,
)

genrule(
    name = 'gentest_codegen_build_unix',
    # Best-effort dependency tracking: this genrule shells out to CMake and is not hermetic.
    # Still, we want Bazel to rebuild `gentest_codegen` when the generator sources/config change.
    srcs = _gentest_codegen_build_srcs,
    outs = ['gen_tools/gentest_codegen'],
    cmd = "set -e; " +
          "GENTEST_CMAKE_ARGS='-DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON'; " +
          "GENTEST_SOURCE_ROOT=$$(dirname \"$(location CMakeLists.txt)\"); " +
          "if [ -x /opt/homebrew/bin/cmake ]; then GENTEST_CMAKE_BIN=/opt/homebrew/bin/cmake; " +
          "else GENTEST_CMAKE_BIN=$$(command -v cmake); fi && " +
          "if [ -x /opt/homebrew/bin/ninja ]; then GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -G Ninja -DCMAKE_MAKE_PROGRAM=/opt/homebrew/bin/ninja\"; fi && " +
          "if [ -z \"$${CC:-}\" ]; then " +
          "for _cc in /opt/homebrew/opt/llvm/bin/clang /usr/local/opt/llvm/bin/clang /usr/lib64/llvm22/bin/clang /usr/lib64/llvm21/bin/clang /usr/lib64/llvm20/bin/clang /usr/lib/llvm-22/bin/clang /usr/lib/llvm-21/bin/clang /usr/lib/llvm-20/bin/clang; do " +
          "if [ -x \"$$_cc\" ]; then CC=\"$$_cc\"; break; fi; done; fi && " +
          "if [ -z \"$${CXX:-}\" ]; then " +
          "for _cxx in /opt/homebrew/opt/llvm/bin/clang++ /usr/local/opt/llvm/bin/clang++ /usr/lib64/llvm22/bin/clang++ /usr/lib64/llvm21/bin/clang++ /usr/lib64/llvm20/bin/clang++ /usr/lib/llvm-22/bin/clang++ /usr/lib/llvm-21/bin/clang++ /usr/lib/llvm-20/bin/clang++; do " +
          "if [ -x \"$$_cxx\" ]; then CXX=\"$$_cxx\"; break; fi; done; fi && " +
          "if [ -n \"$${CC:-}\" ]; then GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -DCMAKE_C_COMPILER=$$CC\"; fi && " +
          "if [ -n \"$${CXX:-}\" ]; then GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -DCMAKE_CXX_COMPILER=$$CXX\"; LLVM_BIN=$$(dirname \"$${CXX}\"); fi && " +
          "if [ -z \"$${LLVM_DIR:-}\" ]; then " +
          "for _llvm in \"$${LLVM_BIN:-}/../lib/cmake/llvm\" \"$${LLVM_BIN:-}/../lib64/cmake/llvm\" /opt/homebrew/opt/llvm/lib/cmake/llvm /usr/local/opt/llvm/lib/cmake/llvm /usr/lib64/llvm22/lib64/cmake/llvm /usr/lib64/llvm21/lib64/cmake/llvm /usr/lib64/llvm20/lib64/cmake/llvm /usr/lib/llvm-22/lib/cmake/llvm /usr/lib/llvm-21/lib/cmake/llvm /usr/lib/llvm-20/lib/cmake/llvm; do " +
          "if [ -f \"$$_llvm/LLVMConfig.cmake\" ]; then LLVM_DIR=\"$$_llvm\"; break; fi; done; fi && " +
          "if [ -z \"$${Clang_DIR:-}\" ]; then " +
          "for _clang_dir in \"$${LLVM_BIN:-}/../lib/cmake/clang\" \"$${LLVM_BIN:-}/../lib64/cmake/clang\" /opt/homebrew/opt/llvm/lib/cmake/clang /usr/local/opt/llvm/lib/cmake/clang /usr/lib64/llvm22/lib64/cmake/clang /usr/lib64/llvm21/lib64/cmake/clang /usr/lib64/llvm20/lib64/cmake/clang /usr/lib/llvm-22/lib/cmake/clang /usr/lib/llvm-21/lib/cmake/clang /usr/lib/llvm-20/lib/cmake/clang; do " +
          "if [ -f \"$$_clang_dir/ClangConfig.cmake\" ]; then Clang_DIR=\"$$_clang_dir\"; break; fi; done; fi && " +
          "if [ -z \"$${LLVM_DIR:-}\" ]; then echo 'gentest bazel: supported LLVM_DIR not found' >&2; exit 127; fi && " +
          "if [ -z \"$${Clang_DIR:-}\" ]; then echo 'gentest bazel: supported Clang_DIR not found' >&2; exit 127; fi && " +
          "GENTEST_CMAKE_ARGS=\"$$GENTEST_CMAKE_ARGS -DLLVM_DIR=$$LLVM_DIR -DClang_DIR=$$Clang_DIR\" && " +
          "if [ -z \"$${GENTEST_CMAKE_BIN}\" ]; then echo 'gentest bazel: cmake not found' >&2; exit 127; fi && " +
          "rm -rf $(@D)/b && mkdir -p $(@D)/b && " +
          "\"$${GENTEST_CMAKE_BIN}\" -S \"$$GENTEST_SOURCE_ROOT\" -B $(@D)/b $$GENTEST_CMAKE_ARGS && " +
          "\"$${GENTEST_CMAKE_BIN}\" --build $(@D)/b --target gentest_codegen -j 1 && " +
          "cp $(@D)/b/tools/gentest_codegen $@",
    tags = ['no-sandbox', 'local'],
    target_compatible_with = select({
        '@bazel_tools//src/conditions:windows': ['@platforms//:incompatible'],
        '//conditions:default': [],
    }),
)

genrule(
    name = 'gentest_codegen_build_windows',
    srcs = _gentest_codegen_build_srcs,
    outs = ['gen_tools/gentest_codegen.exe'],
    cmd_bat = "setlocal EnableDelayedExpansion && set GENTEST_CMAKE_ARGS=-DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON && " +
              "for %%I in (\"$(location CMakeLists.txt)\") do set GENTEST_SOURCE_ROOT=%%~dpI && " +
              "if not defined CC for %%I in (C:\\Tools\\llvm-22.1.0\\bin\\clang.exe C:\\Tools\\llvm-21.1.4\\bin\\clang.exe C:\\Tools\\llvm-20.1.8\\bin\\clang.exe) do if not defined CC if exist %%I set CC=%%I && " +
              "if not defined CXX for %%I in (C:\\Tools\\llvm-22.1.0\\bin\\clang++.exe C:\\Tools\\llvm-21.1.4\\bin\\clang++.exe C:\\Tools\\llvm-20.1.8\\bin\\clang++.exe) do if not defined CXX if exist %%I set CXX=%%I && " +
              "if defined CC set GENTEST_CMAKE_ARGS=!GENTEST_CMAKE_ARGS! -DCMAKE_C_COMPILER=\"!CC!\" && " +
              "if defined CXX set GENTEST_CMAKE_ARGS=!GENTEST_CMAKE_ARGS! -DCMAKE_CXX_COMPILER=\"!CXX!\" && " +
              "if not defined LLVM_DIR for %%I in (C:\\Tools\\llvm-22.1.0\\lib\\cmake\\llvm C:\\Tools\\llvm-21.1.4\\lib\\cmake\\llvm C:\\Tools\\llvm-20.1.8\\lib\\cmake\\llvm) do if not defined LLVM_DIR if exist %%I\\LLVMConfig.cmake set LLVM_DIR=%%I && " +
              "if not defined Clang_DIR for %%I in (C:\\Tools\\llvm-22.1.0\\lib\\cmake\\clang C:\\Tools\\llvm-21.1.4\\lib\\cmake\\clang C:\\Tools\\llvm-20.1.8\\lib\\cmake\\clang) do if not defined Clang_DIR if exist %%I\\ClangConfig.cmake set Clang_DIR=%%I && " +
              "if not defined LLVM_DIR (echo gentest bazel: supported LLVM_DIR not found 1>&2 & exit /b 127) && " +
              "if not defined Clang_DIR (echo gentest bazel: supported Clang_DIR not found 1>&2 & exit /b 127) && " +
              "set GENTEST_CMAKE_ARGS=!GENTEST_CMAKE_ARGS! -DLLVM_DIR=\"!LLVM_DIR!\" -DClang_DIR=\"!Clang_DIR!\" && " +
              "if exist \"%ProgramFiles%\\CMake\\bin\\cmake.exe\" (set GENTEST_CMAKE_BIN=%ProgramFiles%\\CMake\\bin\\cmake.exe) else (set GENTEST_CMAKE_BIN=cmake) && " +
              "if exist $(@D)\\b rmdir /S /Q $(@D)\\b && mkdir $(@D)\\b && " +
              "\"!GENTEST_CMAKE_BIN!\" -S \"!GENTEST_SOURCE_ROOT!\" -B $(@D)\\b !GENTEST_CMAKE_ARGS! && " +
              "\"!GENTEST_CMAKE_BIN!\" --build $(@D)\\b --target gentest_codegen --config Release && " +
              "(if exist $(@D)\\b\\tools\\Release\\gentest_codegen.exe " +
              "(copy /Y $(@D)\\b\\tools\\Release\\gentest_codegen.exe $@ >NUL) " +
              "else (copy /Y $(@D)\\b\\tools\\gentest_codegen.exe $@ >NUL))",
    tags = ['no-sandbox', 'local'],
    target_compatible_with = select({
        '@bazel_tools//src/conditions:windows': [],
        '//conditions:default': ['@platforms//:incompatible'],
    }),
)

alias(
    name = 'gentest_codegen_build',
    actual = select({
        '@bazel_tools//src/conditions:windows': ':gentest_codegen_build_windows',
        '//conditions:default': ':gentest_codegen_build_unix',
    }),
)

alias(
    name = 'gentest_codegen',
    actual = ':gentest_codegen_build',
    visibility = ['//visibility:public'],
)

cc_library(
    name = 'gentest_runtime',
    srcs = [
        'src/bench_stats.cpp',
        'src/runtime_context.cpp',
        'src/runner_case_invoker.cpp',
        'src/runner_case_invoker.h',
        'src/runner_cli.cpp',
        'src/runner_cli.h',
        'src/runner_fixture_runtime.cpp',
        'src/runner_fixture_runtime.h',
        'src/runner_measured_executor.cpp',
        'src/runner_measured_executor.h',
        'src/runner_measured_format.cpp',
        'src/runner_measured_format.h',
        'src/runner_measured_report.cpp',
        'src/runner_measured_report.h',
        'src/runner_impl.cpp',
        'src/runner_orchestrator.cpp',
        'src/runner_orchestrator.h',
        'src/runner_reporting.cpp',
        'src/runner_reporting.h',
        'src/runner_result_model.h',
        'src/runner_selector.cpp',
        'src/runner_selector.h',
        'src/runner_tag_utils.h',
        'src/runner_test_executor.cpp',
        'src/runner_test_executor.h',
        'src/runner_test_plan.cpp',
        'src/runner_test_plan.h',
    ],
    hdrs = glob([
        'include/gentest/*.h',
        'include/gentest/detail/*.h',
        'third_party/include/tabulate/*.hpp',
    ], allow_empty = False),
    copts = ['-std=c++20', '-DFMT_HEADER_ONLY', '-Iinclude', '-Itests', '-Ithird_party/include'] + select({
        '@bazel_tools//src/conditions:windows': ['/wd5030'],
        '//conditions:default': ['-Wno-attributes'],
    }),
    includes = ['include', 'third_party/include'],
    linkopts = _gentest_linkopts,
    deps = ['@fmt//:fmt'],
    visibility = ['//visibility:public'],
)

cc_library(
    name = 'gentest',
    module_interfaces = ['include/gentest/gentest.cppm'],
    hdrs = glob([
        'include/gentest/*.h',
        'include/gentest/detail/*.h',
        'third_party/include/tabulate/*.hpp',
    ], allow_empty = False),
    copts = ['-std=c++20', '-DFMT_HEADER_ONLY', '-Iinclude', '-Itests', '-Ithird_party/include'] + select({
        '@bazel_tools//src/conditions:windows': ['/wd5030'],
        '//conditions:default': ['-Wno-attributes'],
    }),
    includes = ['include', 'third_party/include'],
    linkopts = _gentest_linkopts,
    deps = [
        ':gentest_runtime',
        '@fmt//:fmt',
    ],
    features = _gentest_module_features,
    visibility = ['//visibility:public'],
)

cc_library(
    name = 'gentest_mock',
    module_interfaces = ['include/gentest/gentest.mock.cppm'],
    hdrs = glob([
        'include/gentest/*.h',
        'include/gentest/detail/*.h',
        'third_party/include/tabulate/*.hpp',
    ], allow_empty = False),
    copts = ['-std=c++20', '-DFMT_HEADER_ONLY', '-Iinclude', '-Itests', '-Ithird_party/include'] + select({
        '@bazel_tools//src/conditions:windows': ['/wd5030'],
        '//conditions:default': ['-Wno-attributes'],
    }),
    includes = ['include', 'third_party/include'],
    linkopts = _gentest_linkopts,
    deps = [
        ':gentest',
        ':gentest_runtime',
        '@fmt//:fmt',
    ],
    features = _gentest_module_features,
    visibility = ['//visibility:public'],
)

cc_library(
    name = 'gentest_bench_util',
    module_interfaces = ['include/gentest/gentest.bench_util.cppm'],
    hdrs = glob([
        'include/gentest/*.h',
        'include/gentest/detail/*.h',
        'third_party/include/tabulate/*.hpp',
    ], allow_empty = False),
    copts = ['-std=c++20', '-DFMT_HEADER_ONLY', '-Iinclude', '-Itests', '-Ithird_party/include'] + select({
        '@bazel_tools//src/conditions:windows': ['/wd5030'],
        '//conditions:default': ['-Wno-attributes'],
    }),
    includes = ['include', 'third_party/include'],
    linkopts = _gentest_linkopts,
    deps = [
        ':gentest',
        ':gentest_runtime',
        '@fmt//:fmt',
    ],
    features = _gentest_module_features,
    visibility = ['//visibility:public'],
)

cc_library(
    name = 'gentest_main',
    srcs = ['src/gentest_main.cpp'],
    copts = ['-std=c++20', '-DFMT_HEADER_ONLY', '-Iinclude', '-Itests'] + select({
        '@bazel_tools//src/conditions:windows': ['/wd5030'],
        '//conditions:default': ['-Wno-attributes'],
    }),
    linkopts = _gentest_linkopts,
    deps = [
        ':gentest_runtime',
        '@fmt//:fmt',
    ],
    visibility = ['//visibility:public'],
)

sh_test(
    name = 'codegen_check_invalid',
    srcs = ['scripts/codegen_check_invalid.sh'],
    data = [
        ':gentest_codegen_build',
        'tests/smoke/invalid_attrs.cpp',
    ],
)

gentest_add_mocks_textual(
    name = 'gentest_consumer_textual_mocks',
    defs = ['tests/consumer/header_mock_defs.hpp'],
    public_header = 'gentest_consumer_mocks.hpp',
    linkopts = _gentest_linkopts,
)

gentest_attach_codegen_textual(
    name = 'gentest_consumer_textual_bazel',
    src = 'tests/consumer/cases.cpp',
    main = 'tests/consumer/main.cpp',
    mock_targets = [':gentest_consumer_textual_mocks'],
    linkopts = _gentest_linkopts,
    source_includes = ['tests', 'tests/consumer'],
)

gentest_add_mocks_modules(
    name = 'gentest_consumer_module_mocks',
    defs = [
        'tests/consumer/service_module.cppm',
        'tests/consumer/module_mock_defs.cppm',
    ],
    defs_modules = [
        'gentest.consumer_service',
        'gentest.consumer_mock_defs',
    ],
    module_name = 'gentest.consumer_mocks',
    linkopts = _gentest_linkopts,
)

gentest_attach_codegen_modules(
    name = 'gentest_consumer_module_bazel',
    src = 'tests/consumer/cases.cppm',
    main = 'tests/consumer/main.cpp',
    mock_targets = [':gentest_consumer_module_mocks'],
    deps = [
        ':gentest',
        ':gentest_bench_util',
    ],
    defines = ['GENTEST_CONSUMER_USE_MODULES=1'],
    linkopts = _gentest_linkopts,
    source_includes = ['tests', 'tests/consumer'],
)

sh_binary(
    name = 'poc_cross_aarch64_qemu',
    srcs = ['scripts/poc_cross_aarch64_qemu.sh'],
    tags = ['local', 'manual'],
    visibility = ['//visibility:public'],
)

gentest_suite('unit')
gentest_suite('integration')
gentest_suite('fixtures')
gentest_suite('skiponly')
